--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ bcrypt==4.0.1
 Werkzeug==2.3.7
 python-dotenv==1.0.0
 cryptography==41.0.7
-email_validator==2.1.0
+email-validator==2.2.0
 psycopg2-binary==2.9.7
